@@ -1,4 +1,10 @@
 2013-07-07  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el (bbdb-buffer): Simplify.  Avoid creating auto-save
+	files for bbdb-file till it contains at least one record.
+	* lisp/bbdb.el (bbdb-revert-buffer): Handle the case that we did
+	not yet create bbdb-file.
+
+2013-07-07  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb.el (bbdb-update-records-p): Fix docstring.
 
 2013-05-26  Roland Winkler  <winkler@gnu.org>
